--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -97,7 +97,7 @@
                     android:layout_marginLeft="@dimen/margin_right_16"
                     android:layout_marginRight="@dimen/margin_right_16"
                     android:text="로그인"
-                    android:background="@color/black"
+                    android:background="@drawable/black_border_fade"
                     android:textColor="@color/white"
                     android:textSize="@dimen/text_20" />
 
