--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -78,7 +78,7 @@
                             android:textColor="@color/white"
                             android:textColorHint="@color/white"
                             android:textSize="@dimen/text_20"
-                            android:text="@={vm._inputAccount}"
+                            android:text="@={vm.inputAccount}"
                             />
 
                         <Button
@@ -123,7 +123,7 @@
                             android:textColor="@color/white"
                             android:textColorHint="@color/white"
                             android:textSize="@dimen/text_20"
-                            android:text="@={vm._inputPW}"/>
+                            android:text="@={vm.inputPW}"/>
 
                         <ImageView
                             android:layout_width="0dp"
@@ -158,7 +158,7 @@
                             android:textColor="@color/white"
                             android:textColorHint="@color/white"
                             android:textSize="@dimen/text_20"
-                            android:text="@={vm._inputPWcheck}"/>
+                            android:text="@={vm.inputPWcheck}"/>
 
                         <ImageView
                             android:layout_width="0dp"
@@ -188,7 +188,7 @@
                         android:textColor="@color/white"
                         android:textColorHint="@color/white"
                         android:textSize="@dimen/text_20"
-                        android:text="@={vm._inputName}"/>
+                        android:text="@={vm.inputName}"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -208,7 +208,7 @@
                             android:background="@drawable/black_border_fade"
                             android:textColor="@color/white"
                             android:textSize="@dimen/text_20"
-                            android:onClick="@{()->vm.registerRequest()}"/>
+                            android:onClick="@{()->vm.registerRequest(vm.inputAccount, vm.inputPW, vm.inputName)}"/>
 
                         <Button
                             android:id="@+id/cancel_btn"
