--- a/app/src/main/res/drawable/baseline_done_24.xml
+++ b/app/src/main/res/drawable/baseline_done_24.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:width="16dp"
+    android:height="15dp"
+    android:viewportWidth="16"
+    android:viewportHeight="15">
   <path
-      android:fillColor="@android:color/white"
-      android:pathData="M9,16.2L4.8,12l-1.4,1.4L9,19 21,7l-1.4,-1.4L9,16.2z"/>
+      android:pathData="M15.3157,1.5779L6.0966,14.5931L0.2598,8.1726L1.7397,6.8272L5.9028,11.4067L13.6837,0.4219L15.3157,1.5779Z"
+      android:fillColor="#21DD34"
+      android:fillType="evenOdd"/>
 </vector>
