--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,6 +28,8 @@
     <dimen name="padding_14">14dp</dimen>
     <dimen name="padding_16">16dp</dimen>
 
+    <dimen name="dimen_30">30dp</dimen>
+
     <dimen name="text_16">16dp</dimen>
     <dimen name="text_14">14dp</dimen>
     <dimen name="text_12">12dp</dimen>
