--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,15 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="baseFontSetting">
+        <item name="android:includeFontPadding">false</item>
+    </style>
 
+    <style name="P6_12pt_Regular" parent="baseFontSetting">
+        <item name="android:textSize">12sp</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:letterSpacing">-0.03</item>
+    </style>
 
     <style name="Normal_Margin_Style" parent="AppTheme">
         <item name="android:layout_marginRight">@dimen/margin_right_16</item>
